--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
-<!DOCTYPE html>
-<html lang="es">
+<html>
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portal | Animación con p5.js</title>
-  <link rel="stylesheet" href="css/estilos.css">
-  <script src="js/p5.js"></script>
-  <script src="js/funciones.js"></script>
+  <title>PoseNet example using p5.js</title>
+  <script src="js/p5.min.js"></script>
+  <script src="js/ml5.min.js" type="text/javascript"></script>
+  
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
+
 <body>
-  <h1>Portal</h1>
-  <p>Animación de un portal a otra dimensión</p>
-  <div id="anim"></div>
-  <p>Autor: José Casanova</p>
+  <section>
+    <canvas></canvas>
+    <div class="grid">
+      
+    </div>
+  </section>
+  <div id="cuerpo"></div>
+  <div id="resultados"></div>
+  <script src="js/funciones.js" type="text/javascript"></script>
 </body>
+
 </html>
