--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>PoseNet example using p5.js</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="js/p5.min.js"></script>
   <script src="js/ml5.min.js" type="text/javascript"></script>
   
